--- a/4ifir Wizard source code/SmartMode - e.BAMATIC/config.ini
+++ b/4ifir Wizard source code/SmartMode - e.BAMATIC/config.ini
@@ -1,38 +1,38 @@
 [*Step 1 - RAM MHz]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/RAM/json/MHz_mariko.json' name 32
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/MHz_mariko.json' name 32
 hex-by-cust-offset /atmosphere/kips/loader.kip 32 {json_mark_cur_kip(*,hex)}
 back
 
 [*Step 1 - RAM MHz]
 ; Erista
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/RAM/json/MHz_erista.json' name 24
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/MHz_erista.json' name 24
 hex-by-cust-offset /atmosphere/kips/loader.kip 24 {json_mark_cur_kip(*,hex)}
 back
 
 [*Step 2 - EMC Balance]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/RAM/json/EBal.json' name 12352
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/EBal.json' name 12352
 hex-by-cust-offset /atmosphere/kips/loader.kip 12352 {json_mark_cur_kip(*,hex)}
 back
 
 [*Step 3 - EBA-Shift]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/RAM/json/Eba_shift.json' name 12360
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/Eba_shift.json' name 12360
 hex-by-cust-offset /atmosphere/kips/loader.kip 12360 {json_mark_cur_kip(*,hex)}
 back
 
 [*pMeh 20 rVDDick]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/RAM/json/pMeh20.json' name 12444
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/pMeh20.json' name 12444
 hex-by-cust-offset /atmosphere/kips/loader.kip 12444 {json_source(*,hex)}
 back
 
 [*pMeh 21 gVMINDick]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/RAM/json/pMeh21.json' name 12448
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/pMeh21.json' name 12448
 hex-by-cust-offset /atmosphere/kips/loader.kip 12448 {json_source(*,hex)}
 back
 
