--- a/4ifir Wizard source code/4Advanced - FullAsist/Full Assist/config.ini
+++ b/4ifir Wizard source code/4Advanced - FullAsist/Full Assist/config.ini
@@ -1,5 +1,5 @@
 [*Info]
-text_source '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/txt/info.txt'
+text_source '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/txt/info.txt'
 
 [*Start ;; 4IFIR RAM Mode]
 catch_errors
@@ -127,11 +127,11 @@ hex-by-cust-offset /atmosphere/kips/loader.kip 44 00
 hex-by-cust-offset /atmosphere/kips/loader.kip 52 030000
 ; GPU Overvolt
 hex-by-cust-offset /atmosphere/kips/loader.kip 12344 000000
-json_source '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/json/0RAM.json' name
+json_source '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/json/0RAM.json' name
 hex-by-cust-offset /atmosphere/kips/loader.kip 32 {json_source(*,hex)}
-cp '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/inis/1CPU_BOOST.ini' '/switch/.packages/4IFIR Wizard/config.ini'
-rename '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/config.ini' '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/!config.ini' 
-rename '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/config.ini' '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/!config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/Backup/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/Backup/!config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/About/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/About/!config.ini' 
+cp '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/inis/1CPU_BOOST.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/config.ini' '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/!config.ini' 
+rename '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/config.ini' '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/!config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/Backup/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/Backup/!config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/!config.ini' 
 reboot
