--- a/4ifir Wizard source code/4Advanced - FullAsist/Full Assist/inis/18CPU_HIGH_UV.ini
+++ b/4ifir Wizard source code/4Advanced - FullAsist/Full Assist/inis/18CPU_HIGH_UV.ini
@@ -26,9 +26,9 @@ reboot
 
 -- Stop the process
 [Save and stop]
-cp '/switch/.packages/4IFIR Wizard/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
-rename '/switch/.packages/4IFIR Wizard/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/Full Assist/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Manual Configuration/!config.ini' '/switch/.packages/4IFIR Wizard/Manual Configuration/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/About/!config.ini' '/switch/.packages/4IFIR Wizard/About/config.ini' 
+cp '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/config.ini' 
+rename '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/Backup/config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/config.ini'
 back
