--- a/4ifir Wizard source code/4Advanced - FullAsist/Full Assist/inis/2CPU_VMAX.ini
+++ b/4ifir Wizard source code/4Advanced - FullAsist/Full Assist/inis/2CPU_VMAX.ini
@@ -2,32 +2,32 @@
 [*Yes ;; CPU VMAX Mode]
 ; Mariko
 catch_errors
-json_source '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/json/2CPU_VMAX.json' name
+json_source '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/json/2CPU_VMAX.json' name
 hex-by-cust-offset /atmosphere/kips/loader.kip 28 {json_source(*,hex)}
-cp '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/inis/3VDD2.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+cp '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/inis/3VDD2.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
 [*No ;; CPU Boost Mode]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/json/1CPU_BOOST.json' name 12
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/json/1CPU_BOOST.json' name 12
 hex-by-cust-offset /atmosphere/kips/loader.kip 12 {json_mark_cur_kip(*,hex)}
-; cp '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/inis/gpu-ram.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+; cp '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/inis/gpu-ram.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
 -- Go to the previous step
 
 [*4IFIR RAM Mode]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/json/0RAM.json' name 32
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/json/0RAM.json' name 32
 hex-by-cust-offset /atmosphere/kips/loader.kip 32 {json_mark_cur_kip(*,hex)}
-cp '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/inis/1CPU_BOOST.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+cp '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/inis/1CPU_BOOST.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
 -- Stop the process
 [Save and stop]
-cp '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
-rename '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/Full Assist/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced : FullAsist/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard : Save&Load/About/config.ini' 
+cp '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/Full Assist/config.ini' 
+rename '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/Backup/config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/config.ini' 
 back
