--- a/4ifir Wizard source code/SmartMode - e.BAMATIC/config.ini
+++ b/4ifir Wizard source code/SmartMode - e.BAMATIC/config.ini
@@ -36,3 +36,6 @@ json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json
 hex-by-cust-offset /atmosphere/kips/loader.kip 12448 {json_source(*,hex)}
 back
 
+[Complete [Reboot]]
+reboot
+
