--- a/4ifir Wizard source code/4Advanced - FullAsist/GPU/config.ini
+++ b/4ifir Wizard source code/4Advanced - FullAsist/GPU/config.ini
@@ -11,6 +11,12 @@ json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/GPU/json
 hex-by-cust-offset /atmosphere/kips/loader.kip 52 {json_mark_cur_kip(*,hex)}
 back
 
+[*GPU Overvolt]
+catch_errors
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/GPU/json/GPU_OVER.json' name 12344
+hex-by-cust-offset /atmosphere/kips/loader.kip 12344 {json_mark_cur_kip(*,hex)}
+back
+
 -- Advanced settings
 
 [*192MHz]
