--- a/4ifir Wizard source code/Dashboard/Backup/config.ini
+++ b/4ifir Wizard source code/Dashboard/Backup/config.ini
@@ -5,13 +5,13 @@ backup
 ; Mariko
 catch_errors
 source '/atmosphere/kips/.bak/*'
-kip_info {source} '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/Data/curconf_mariko.json' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/Data/curconf_mariko2.json' name
+kip_info {source} '/switch/.packages/4IFIR Wizard/Dashboard/About/Data/curconf_mariko.json' '/switch/.packages/4IFIR Wizard/Dashboard/About/Data/curconf_mariko2.json' name
 
 [*Manage Backups]
 ; Erista
 catch_errors
 source '/atmosphere/kips/.bak/*'
-kip_info {source} '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/Data/curconf_erista.json' '/switch/.packages/4IFIR Wizard/Dashboard - Save&Load/About/Data/curconf_erista2.json' name
+kip_info {source} '/switch/.packages/4IFIR Wizard/Dashboard/About/Data/curconf_erista.json' '/switch/.packages/4IFIR Wizard/Dashboard/About/Data/curconf_erista2.json' name
 
 [Apply [Reboot]]
 reboot
