--- a/4ifir Wizard source code/SmartMode/config.ini
+++ b/4ifir Wizard source code/SmartMode/config.ini
@@ -1,27 +1,7 @@
-[*Step 1 - RAM MHz]
-; Mariko
+[*e.BAMATIC]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/MHz_mariko.json' name 32
-hex-by-cust-offset /atmosphere/kips/loader.kip 32 {json_mark_cur_kip(*,hex)}
-back
-
-[*Step 1 - RAM MHz]
-; Erista
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/MHz_erista.json' name 24
-hex-by-cust-offset /atmosphere/kips/loader.kip 24 {json_mark_cur_kip(*,hex)}
-back
-
-[*Step 2 - EMC Balance]
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/EBal.json' name 12352
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/SmartMode/json/eBamatic.json' name 12352
 hex-by-cust-offset /atmosphere/kips/loader.kip 12352 {json_mark_cur_kip(*,hex)}
-back
-
-[*Step 3 - EBA-Shift]
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced - FullAsist/RAM/json/Eba_shift.json' name 12360
-hex-by-cust-offset /atmosphere/kips/loader.kip 12360 {json_mark_cur_kip(*,hex)}
 back
 
 [Complete [Reboot]]
