правка значений таймингов в асистенте

--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/16Core 7.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/16Core 7.ini
@@ -2,7 +2,7 @@
 [*Yes ;; Timings Preset 7]
 ; Mariko
 catch_errors
-json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/10Core 1.json' name
+json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core 7.json' name
 hex-by-cust-offset /atmosphere/kips/loader.kip 84 {json_source(*,hex)} ;7
 cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/17SpeedShift.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
