--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/12Core 3.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/12Core 3.ini
@@ -10,7 +10,7 @@ reboot
 [*No ;; Timings Preset 2]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/10Core 1.json' name 64
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core 2.json' name 64
 hex-by-cust-offset /atmosphere/kips/loader.kip 64 {json_mark_cur_kip(*,hex)} ;2
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
