--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/17SpeedShift.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/17SpeedShift.ini
@@ -10,7 +10,7 @@ reboot
 [*No ;; Timings Preset 7]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/10Core 1.json' name 84
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core 7.json' name 84
 hex-by-cust-offset /atmosphere/kips/loader.kip 84 {json_mark_cur_kip(*,hex)} ;7
 ; cp '/switch/.packages/4IFIR Wizard/Full Assist/4Advanced/inis/speed shift.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
