--- a/4ifir Wizard source code/SmartMode/config.ini
+++ b/4ifir Wizard source code/SmartMode/config.ini
@@ -4,6 +4,7 @@ json_mark_cur_kip '/switch/.packages/4IFIR Wizard/SmartMode/json/eBamatic.json' 
 hex-by-cust-offset /atmosphere/kips/loader.kip 12352 {json_mark_cur_kip(*,hex)}
 back
 
+[>QuickTune]
+
 [Complete [Reboot]]
 reboot
-
