--- a/4ifir Wizard source code/SmartMode/QuickTune/RAM/config.ini
+++ b/4ifir Wizard source code/SmartMode/QuickTune/RAM/config.ini
@@ -37,7 +37,7 @@ back
 [*Timings Preset 2]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/10Core 1.json' name 64
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core 2.json' name 64
 hex-by-cust-offset /atmosphere/kips/loader.kip 64 {json_mark_cur_kip(*,hex)}
 back
 
@@ -72,6 +72,6 @@ back
 [*Timings Preset 7]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/10Core 1.json' name 84
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core 7.json' name 84
 hex-by-cust-offset /atmosphere/kips/loader.kip 84 {json_mark_cur_kip(*,hex)}
 back
