--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/24Finish.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/24Finish.ini
@@ -44,12 +44,12 @@ rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.p
 rename '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini'
 back
 
--- Reconfigure dCPUv
+-- Reconfigure EBA-SHIFT
 
-[*dCPUv]
+[*EBA-SHIFT]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/19GPU_OVER.json' name 12348
-hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_mark_cur_kip(*,hex)}
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Eba_shift.json' name 12360
+hex-by-cust-offset /atmosphere/kips/loader.kip 12360 {json_mark_cur_kip(*,hex)}
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/gpu-ram.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
