--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/22Core8.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/22Core8.ini
@@ -2,24 +2,24 @@
 [*Yes ;; Timing preset 8]
 ; Mariko
 catch_errors
-json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/20dCPUv.json' name
-hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_source(*,hex)}
-cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/21Finish.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core8.json' name
+hex-by-cust-offset /atmosphere/kips/loader.kip 12356 {json_source(*,hex)}
+cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/23Eba_shift.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
-[*No ;; GPU Over Mode]
+[*No ;; EMC Ballance]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/19GPU_OVER.json' name 12344
-hex-by-cust-offset /atmosphere/kips/loader.kip 12344  {json_mark_cur_kip(*,hex)}
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Ebal.json' name 12352
+hex-by-cust-offset /atmosphere/kips/loader.kip 12352  {json_mark_cur_kip(*,hex)}
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/gpu-ram.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 -- Go to the previous step
 
-[*CPU High Undervolt Mode]
+[*dCPUv]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/18CPU_HIGH_UV.json' name 12340
-hex-by-cust-offset /atmosphere/kips/loader.kip 12340 {json_mark_cur_kip(*,hex)}
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/20dCPUv.json.json' name 12348
+hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_mark_cur_kip(*,hex)}
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
