--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/23Eba_shift.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/23Eba_shift.ini
@@ -1,25 +1,25 @@
 -- Did it work?
-[*Yes ;; dCPUv]
+[*Yes ;; EBA-SHIFT]
 ; Mariko
 catch_errors
-json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/20dCPUv.json' name
-hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_source(*,hex)}
-cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/21Finish.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Eba_shift.json' name
+hex-by-cust-offset /atmosphere/kips/loader.kip 12360 {json_source(*,hex)}
+cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/24Finish.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
-[*No ;; GPU Over Mode]
+[*No ;; Timing preset 8]
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/19GPU_OVER.json' name 12344
-hex-by-cust-offset /atmosphere/kips/loader.kip 12344  {json_mark_cur_kip(*,hex)}
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Core 8.json' name 12356
+hex-by-cust-offset /atmosphere/kips/loader.kip 12356  {json_mark_cur_kip(*,hex)}
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/gpu-ram.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 -- Go to the previous step
 
-[*CPU High Undervolt Mode]
+[*EMC Ballance]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/18CPU_HIGH_UV.json' name 12340
-hex-by-cust-offset /atmosphere/kips/loader.kip 12340 {json_mark_cur_kip(*,hex)}
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/Ebal.json' name 12352
+hex-by-cust-offset /atmosphere/kips/loader.kip 12352 {json_mark_cur_kip(*,hex)}
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
