--- a/4ifir Wizard source code/4Advanced/Full Assist/config.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/config.ini
@@ -133,5 +133,5 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/1CPU_BOOST.ini' '/
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' 
+rename '/switch/.packages/4IFIR Wizard/Dashboard/config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' 
 reboot
