--- a/4ifir Wizard source code/SmartMode/config.ini
+++ b/4ifir Wizard source code/SmartMode/config.ini
@@ -1,8 +1,4 @@
-[*e.BAMATIC]
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/SmartMode/json/eBamatic.json' name 12352
-hex-by-cust-offset /atmosphere/kips/loader.kip 12352 {json_mark_cur_kip(*,hex)}
-back
+[>eBamatic]
 
 [>QuickTune]
 
