--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/24Finish.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/24Finish.ini
@@ -8,7 +8,7 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switc
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
 back
 
 [Backup as 4IFIR ECO]
@@ -19,7 +19,7 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switc
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
 back
 
 [Backup as 4IFIR Default]
@@ -30,7 +30,7 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switc
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
 back
 
 [Backup as 4IFIR SPORT]
@@ -41,7 +41,7 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switc
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
 back
 
 -- Reconfigure EBA-SHIFT
@@ -59,5 +59,5 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switc
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/About/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/About/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
 back
