--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/15Core 6.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/15Core 6.ini
@@ -30,5 +30,6 @@ cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switc
 rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
-rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'    
+rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Smartmode/!config.ini' '/switch/.packages/4IFIR Wizard/Smartmode/config.ini'    
 back
