--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/24Finish.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/24Finish.ini
@@ -20,6 +20,7 @@ rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/swit
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Smartmode/!config.ini' '/switch/.packages/4IFIR Wizard/Smartmode/config.ini'
 back
 
 [Backup as 4IFIR Default]
@@ -31,6 +32,7 @@ rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/swit
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Smartmode/!config.ini' '/switch/.packages/4IFIR Wizard/Smartmode/config.ini'
 back
 
 [Backup as 4IFIR SPORT]
@@ -42,6 +44,7 @@ rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/swit
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Smartmode/!config.ini' '/switch/.packages/4IFIR Wizard/Smartmode/config.ini'
 back
 
 -- Reconfigure EBA-SHIFT
@@ -60,4 +63,5 @@ rename '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/!config.ini' '/swit
 rename '/switch/.packages/4IFIR Wizard/4Advanced/!config.ini' '/switch/.packages/4IFIR Wizard/4Advanced/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/Backup/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/Backup/config.ini' 
 rename '/switch/.packages/4IFIR Wizard/Dashboard/!config.ini' '/switch/.packages/4IFIR Wizard/Dashboard/config.ini'
+rename '/switch/.packages/4IFIR Wizard/Smartmode/!config.ini' '/switch/.packages/4IFIR Wizard/Smartmode/config.ini'
 back
