--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/15Core 6.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/15Core 6.ini
@@ -4,7 +4,7 @@
 catch_errors
 json_source '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/15Core 6.json' name
 hex-by-cust-offset /atmosphere/kips/loader.kip 80 {json_source(*,hex)} ;6
-cp '/switch/.packages/4IFIR Wizard/Advanced/Full Assist/inis/16Core 7.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/16Core 7.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
 [*No ;; Timings Preset 5]
