--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/15Core 6.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/15Core 6.ini
@@ -12,7 +12,7 @@ reboot
 catch_errors
 json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/14Core 5.json' name 76
 hex-by-cust-offset /atmosphere/kips/loader.kip 76 {json_mark_cur_kip(*,hex)} ;5
-cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 -- Go to the previous step
 
@@ -21,7 +21,7 @@ reboot
 catch_errors
 json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/13Core 4.json' name 72
 hex-by-cust-offset /atmosphere/kips/loader.kip 72 {json_mark_cur_kip(*,hex)} ;4
-cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
+; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
 
 -- Stop the process
