--- a/4ifir Wizard source code/4Advanced/Full Assist/inis/22Core8.ini
+++ b/4ifir Wizard source code/4Advanced/Full Assist/inis/22Core8.ini
@@ -18,7 +18,7 @@ reboot
 [*dCPUv]
 ; Mariko
 catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/20dCPUv.json.json' name 12348
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/json/20dCPUv.json' name 12348
 hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_mark_cur_kip(*,hex)}
 ; cp '/switch/.packages/4IFIR Wizard/4Advanced/Full Assist/inis/Start.ini' '/switch/.packages/4IFIR Wizard/config.ini'
 reboot
